--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.559.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.8"
+    "typescript": "^5.9.3",
+    "vite": "^5.4.8",
+    "zod": "^4.1.13"
   }
 }
